# ray-tracing-gems

./: Contributing.md  LICENSE.txt  README.md  errata.md
Ch_02_What_is_a_Ray/: README.md
Ch_03_Introduction_to_DirectX_Raytracing/: README.md
Ch_04_A_Planetarium_Dome_Master_Camera/: boilerplate.cuh  dome_master_camera.cu
Ch_06_A_Fast_and_Robust_Method_for_Avoiding_Self-Intersection/: offset_ray.cu
Ch_07_Precision_Improvements_for_Ray-Sphere_Intersection/: README.md  sphereIntersect.hlsli
Ch_08_Cool_Patches_A_Geometric_Approach_to_Ray-Bilinear_Patch_Intersections/: .gitignore  rqx.cu
Ch_08_Cool_Patches_A_Geometric_Approach_to_Ray-Bilinear_Patch_Intersections/cpu_test/: cpu_test.sln  garq-single-quad-example.cdf  garq-single-quad-example.nb
Ch_09_Multi-Hit_Ray_Tracing_in_DXR/: NaiveAnyHit.hlsl  NaiveIntersect.hlsl  NodeCAnyHit.hlsl  NodeCIntersect.hlsl  README.md
Ch_10_A_Simple_Load-Balancing_Scheme_with_High_Scaling_Efficiency/: BitReversal.cpp  DistributionScheme.cpp  ImageAssembly.cpp
Ch_11_Automatic_Handling_of_Materials_in_Nested_Volumes/: pop.cpp  push.cpp  types.cpp
Ch_12_A_Microfacet-Based_Shadowing_Function_to_Solve_the_Bump_Terminator_Problem/: terminator.cpp
Ch_13_Ray_Traced_Shadows_Maintaining_Real-Time_Frame_Rates/: .gitignore  README.md  dxrShadows.sln
Ch_13_Ray_Traced_Shadows_Maintaining_Real-Time_Frame_Rates/dxrShadows/: dxrShadows.cpp  dxrShadows.h  dxrShadows.vcxproj  samplesData.cpp  samplesData.h  shaderCommon.h
Ch_14_Ray-Guided_Volumetric_Water_Caustics_in_Single_Scattering_Media_with_DXR/: README.md  imgui.ini
Ch_14_Ray-Guided_Volumetric_Water_Caustics_in_Single_Scattering_Media_with_DXR/Media/: WaterDisplacements.dds  save.01.dds  save.02.dds  save.03.dds  save.04.dds  save.05.dds  save.06.dds  save.07.dds  save.08.dds  save.09.dds  save.10.dds  save.11.dds  save.12.dds  save.13.dds  save.14.dds  save.15.dds  save.16.dds  save.17.dds  save.18.dds  save.19.dds  save.20.dds  save.21.dds  save.22.dds  save.23.dds  save.24.dds  save.25.dds  save.26.dds  save.27.dds  save.28.dds  save.29.dds  save.30.dds  save.31.dds  (+1 more)
Ch_15_On_the_Importance_of_Sampling/: ao_sampler.cpp  estimate_sample_variance.cpp
Ch_16_Sample_Transformations_Zoo/: BoxMullerTransform.cpp  ConcentricSquareMapping.cpp  ConeSampling.cpp  CosineWeightedHemisphereToAVector.cpp  CosineWeightedHemisphereToZAxis.cpp  HenyeyGreensteinPhaseFunction.cpp  HierarchicalWarping.cpp  HomogeneousMedia.cpp  InhomogeneousMedia.cpp  LatitudeLongitudeMapping.cpp  NormalDistribution.cpp  NormalDistributionPDFValue.cpp  OctahedralConcentricMapping.cpp  PhongDistribution.cpp  PolarMapping.cpp  README.md  SampleBilinearInterpolation.cpp  SampleBilinearInterpolationPDFValue.cpp  SampleDiscrete.cpp  SampleLinear.cpp  SampleLinearPDFValue.cpp  SampleMipMap.cpp  TentFunction.cpp  TentFunctionPDFValue.cpp  TextureRejectionSampling.cpp  TriangleQuadFlipping.cpp  TriangleQuadWarping.cpp  samplePiecewiseConstantArray.cpp
Ch_18_Importance_Sampling_of_Many_Lights_on_the_GPU/: README.md
Ch_19_Cinematic_Rendering_in_UE4_with_Real-Time_Ray_Tracing_and_Denoising/: README.md
Ch_23_Interactive Light Map and Irradiance Volume Preview in Frostbite/: InitRay.hlsl  InitRayImproved.hlsl  PerformanceBudgeting.hlsl  VarianceTracking.hlsl
Ch_24_Real-Time_Global_Illumination_with_Photon_Mapping/: ClosestHit.hlsl  KernelModificationForVertexPosition.hlsl  RayGeneration.hlsl  SplattingShaders.hlsl  UniformScaling.hlsl  ValidateAndAddPhoton.hlsl
Ch_25_Hybrid_Rendering_for_Real-Time_Ray_Tracing/: AORayGeneration.hlsl  DistanceMetric.cpp  HaltonSampling.hlsl  MultiscaleMeanEstimator.hlsl  RayGenerationAndMissShaders.pseudocode.hlsl  SummingWeightedResults.txt  TransmittanceDetermination.hlsl
Ch_26_Deferred_Hybrid_Path_Tracing/: LobeFootprintEstimation.glsl
Ch_27_Interactive_Ray_Tracing_Techniques_for_High-Fidelity_Scientific_Visualization/: aomaxdist.cu  clipping.cpp  edgeoutline.cu  onv-packing.cu  transedge.cu  transmax.cu
Ch_28_Ray_Tracing_Inhomogeneous_Volumes/: Makefile  README.md  hdr_loader.h  main.cpp  volume_kernel.cu  volume_kernel.h
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/: CMakeLists.txt  INSTALL-LINUX.txt  INSTALL-WIN.txt  ParticleIntersect.cpp  README.md  README.txt  RaygenProgram.cpp  sampleConfig.h.in
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/CMake/: CompilerInfo.cmake  ConfigCompilerFlags.cmake  CopyDLL.cmake  FindCUDA.cmake  FindDX.cmake  FindOptiX.cmake  LinuxCPUInfo.cmake  Macros.cmake  ptx2cpp.cmake  sse_support.h.in  testmain.c
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/CMake/FindCUDA/: run_nvcc.cmake
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/device_include/: README.txt  commonStructs.h  helpers.h  intersection_refinement.h  random.h
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/optixParticleVolumes/: CMakeLists.txt  README.md  commonStructs.h  constantbg.cu  geometry.cu  material.cu  optixParticleVolumes.cpp  raygen.cu  transferFunction.h
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/support/glfw/: CMakeLists.txt
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/support/imgui/: CMakeLists.txt  imconfig.h  imgui_impl_glfw_gl2.cpp  imgui_impl_glfw_gl2.h
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/sutil/: Arcball.cpp  Arcball.h  CMakeLists.txt  Camera.cpp  Camera.h  HDRLoader.cpp  HDRLoader.h  Mesh.cpp  Mesh.h  OptiXMesh.cpp  OptiXMesh.h  PPMLoader.cpp  PPMLoader.h  SunSky.cpp  SunSky.h  glext.h  phong.cu  phong.h  sutil.cpp  sutil.h  sutilapi.h  triangle_mesh.cu
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/sutil/rply-1.01/: rply.c  rply.h
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/sutil/stb/: stb_image_write.cpp
Ch_29_Efficient_Particle_Volume_Splatting_in_a_Ray_Tracer/sutil/tinyobjloader/: tiny_obj_loader.h
Ch_30_Caustics_Using_Screen_Space_Photon_Mapping/: PhotonTracing.cpp  README.md
Ch_32_Accurate_Real-Time_Specular_Reflections_with_Radiance_Caching/: RayGen.hlsl  SamplePrecomputedRadiance.hlsl  SampleRadianceProbe.hlsl
(+21 files in other folders)
